<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">Welcome to Quiz!</string>
    <string name="intro">Please select the type of questions that you want to answer</string>
    <string name="score">Your score will appear here..</string>
    <string name="hbutton">History</string>
    <string name="mbutton">Maths</string>
    <string name="title_activity_history">History Question</string>
    <string name="title_activity_maths_question">Maths Question</string>
    <string name="mhead">Maths Question</string>
    <string name="mquestiont">What is the result of the following calculation?</string>
    <string name="mquestion">18+4</string>
    <string name="hquestion">History Question</string>
    <string name="qbutton">Confirm</string>
    <string name="msummary">0 of 1 Attempted</string>
    <string name="hsummary">0 of 5 Attempted</string>
    <string name="title_activity_history_question">History</string>

</resources>