<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryQuestion" >

    <TextView
        android:id="@+id/hquestion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hquestion" />

    <RadioGroup
        android:id="@+id/options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.30" >
    </RadioGroup>
        "

    <Button
        android:id="@+id/hsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qbutton" />

    <TextView
        android:id="@+id/hsummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="98dp"
        android:text="@string/hsummary"
        />

</TableLayout>